# ubntplusC

./: .gitignore  2022_7_6_C  average.c  celsius2fahr.c  fahr2celsius.c  fahr2celsius3.c  triangle
homework/: bowling  bowling.c  lotto  lotto.c  lotto2  lotto2.c  lotto3  lotto3.c  maxMidMin  maxMidMin.c  maxMidMin2  maxMidMin2.c  solution_1  solution_1.c  solution_2  solution_2.c
study10/: a.out  arrayAssignment  arrayAssignment.c  arrayCompare  arrayCompare.c  factorial  factorial.c  gradeFunction  gradeFunction.c  pointer  pointer.c  pointer2  pointer2.c  pointer3  pointer3_type  pointer3_type.c  pointer4  pointer4_doublePointer.c  pointer5_fuctionpointer  pointer5_fuctionpointer.c  pointer6_voidPointer  pointer6_voidPointer.c  pointerAndArray  pointerAndArray.c  pointerAndArray2  pointerAndArray2.c  power  power.c  returnValueByArgument  returnValueByArgument.c  swapFunction  swapFunction.c
study11/: a.out  sumArray2  sumArray2.c  sumMatrix  sumMatrix.c  sumMatrix2  sumMatrix2.c  swap3  swap3.c  test.c
study12/: filepointer  filepointer.c  hello7  hello7.c  hello9  hello9.c  hellow8  hellow8.c  string  string.c  string2  string2.c  string3  string3.c
study13/: add  add.c  arraySize  arraySize.c  factoial2  factoial2.c  stringArray  stringArray.c  strtok  strtok.c
study14/: audio.c  bowling  bowling.c  sound.py  test.py
study15/: board  board.c  bowling2  bowling2.c  bowling2.out  bowling3.c
study17/: ButtonInterrupt.ino  BuzerTimerContl.ino  BuzerTimerContl2.ino  BuzerTimerContl3.ino  LEDTimerControl.ino  PinChangeUltrasonic.ino  ServoTimerControl.ino  SevenSegment  servoInterrupt.ino  sound.py
study39/: CMakeLists.txt  booklist.c  booklist.cpp  booklist2.c  test.sql
(+599 files in other folders)
